--- a/.github/workflows/caller.yaml
+++ b/.github/workflows/caller.yaml
@@ -6,7 +6,7 @@ on:
 jobs:
   pirateCoffeeScanner:
     secrets: inherit
-    uses: rahulgauli/workflowtest/.github/workflows/scanner.yaml@v0.0.1-beta
+    uses: rahulgauli/workflowtest/.github/workflows/scanner.yaml@main
     with:
       product_id: '123'
       scan_type: 'full'
